Mobiscroll => 2.5.2, scrollfix-muutoksia, ei näytetä recently played -headeriä listassa jos hiljattain pelattua rundeja ei ole.

--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
@@ -241,6 +241,7 @@
 		
 			<tr style="font-size: 0.8em">
 				<td id="teeWhite" style="color: #ccc">
+				<span id="transparentInput">Hole</span>
 					<input id="transparentInput" type="text" maxlength="2" style="width: 1.5em; border-color: #ccc; color: #999; box-shadow: 0 0 0 ;" data-bind="value: hole_number" disabled />
 				</td>
 				<td id="teeWhite">
