--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -7,7 +7,7 @@
 <!--   	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery.mobile-1.3.0.min.css') }}" /> -->
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
   	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/styles.css') }}" type="text/css" media="screen" rel="stylesheet" />
-    <link href="{{ asset('bundles/apexscore/css/mobiscroll-2.4.1.custom.min.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ asset('bundles/apexscore/css/mobiscroll.custom-2.5.2.min.css') }}" rel="stylesheet" type="text/css" />
 
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
     
@@ -17,10 +17,12 @@
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 	<script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
     <script src="{{ asset('bundles/apexscore/js/date.format.js') }}"></script> 
-	<script src="{{ asset('bundles/apexscore/js/mobiscroll-2.4.1.custom.min.js') }}"></script> 
+	<script src="{{ asset('bundles/apexscore/js/mobiscroll.custom-2.5.2.min.js') }}"></script> 
 	<script src="{{ asset('bundles/apexscore/js/moment.min.js') }}"> </script>
 	
 	<script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
+<!--	<script src="{{ asset('bundles/apexscore/js/jquery.scrollfix.js') }}"></script> -->
+	
 	<script src="{{ asset('bundles/apexscore/js/app.js') }}"></script>
 
 
@@ -64,9 +66,8 @@
 		<a href="#" data-bind="event: { tap: loadCourseSelect }"  data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
 	</div>
 	
+	<div class="scrollOuter" data-theme="b">	
 
-	<div id="f_roundList">
-	
 	<!-- ko if: firstRun() == "working" -->
 		<div data-theme="c" data-role="content">
 			Loading rounds...
@@ -74,7 +75,11 @@
 	<!-- /ko -->		
 	
 	<!-- ko if: firstRun() == false -->
-		<div data-role="content">
+
+	<div class="scrollMiddle">
+		<div class="scrollInner" id="roundListWrap">
+
+<!--		<div data-role="content"> -->
 			<ul id="roundList" data-role="listview" data-theme="c" data-split-icon="delete" data-split-theme="c" data-bind="mobileList: roundList, foreach: roundList"> 
 				
 				<li data-bind="css: { highlightLoaded: $root.highlightLoaded(start_time.date), highlightDeleted: $root.highlightDeleted(start_time.date) } ">
@@ -85,7 +90,7 @@
 						<span data-bind="text: start_time.date" style="visibility: hidden"></span>   
 						<div style="color: #999">
 							<span data-bind="text: moment(start_time.date).calendar()">						</span> - Score:
-							<span data-bind="text: score"></span> / <span data-bind="text: par"> 
+							<span data-bind="text: score"></span> / <span data-bind="text: par"> </span>
 						</div>
 					</span>
 					<span>
@@ -93,9 +98,14 @@
 					</span>
 				</li>
 			</ul>
-		
 		</div>
+	</div>
+	
 	<!-- /ko -->
+	
+
+	
+	
 	
 			<div data-role="popup" id="delPopUp" data-over-theme="a" data-theme="c" data-dismissible="false" style="max-width: 250px; font-size: 75%" class="ui-corner-all" data-mini="true">
 				<div data-role="header" data-theme="a" class="ui-corner-top" style="text-align: center; padding: 6px">
@@ -125,8 +135,6 @@
 			</div>
 		</div>	
 	<!-- /ko -->	
-		
-		
 		
 	</div>
 </div>
@@ -425,7 +433,7 @@
 		<table class="scoreCardTable">
 			<tbody>
 				<tr>
-					<td style="float: right; border-top: 0px" class="scHeaders">Hcp preview: <span data-bind="text: hcpPreview"></span></td>
+					<td style="float: right; border-top: 0px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; padding: 2px" class="scHeaders">Hcp preview: <span data-bind="text: hcpPreview"></span></td>
 				</tr>
 			</tbody>
 		</table>
@@ -471,10 +479,10 @@
 			</div>
 <!--				<div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> -->
 			
-			<div id="tees">
+			<div id="tees" class="content" data-theme="c">
 				<h5>Tee</h5>
 
-				<fieldset data-role="controlgroup" data-mini="true" data-type="horizontal" data-theme="e">
+				<fieldset data-role="controlgroup" data-mini="true" data-type="horizontal">
 					<input type="radio" name="red" id="tees_red" value="red" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
 					<label for="tees_red" style="border-top-color: red" id="prefsTees">Red</label>
 
@@ -511,17 +519,26 @@
 		<a href="#f_page" data-transition="slidefade" data-direction="reverse"  data-role="button" id="Home" data-icon="home" data-iconpos="notext"></a>
 		<div class="headerText">Choose course</div>
 	</div>
-	<div id="courseListWrap">
+	
+	<div class="scrollOuter">
+	<div class="scrollMiddle">
+	
+	<div class="scrollInner" id="courseListWrap">
+		
 		<ul data-theme="c" data-role="listview" data-filter="true" data-filter-placeholder="Course name or abbreviation..." data-filter-theme="c" id="courseList">
 		<!-- data-bind="mobileList: courseList, foreach: courseList"> -->
 
-			<li data-role="list-divider" data-theme="d">Recently played courses</il>
+			<!-- ko if: recentlyPlayedCourses().length > 0 -->
+			
+				<li data-role="list-divider" data-theme="d">Recently played courses</il>
 
-			<!-- ko mobileList: recentlyPlayedCourses, foreach: recentlyPlayedCourses -->
+				<!-- ko mobileList: recentlyPlayedCourses, foreach: recentlyPlayedCourses -->
 
-			<li>
-			<a href="#" data-bind="click: $root.startNewRound.bind($data, id, name), text: name"></a>
-			</li>
+				<li>
+				<a href="#" data-bind="click: $root.startNewRound.bind($data, id, name), text: name"></a>
+				</li>
+			
+				<!-- /ko -->
 			
 			<!-- /ko -->
 			
@@ -536,6 +553,8 @@
 			<!-- /ko -->
 			
 		</ul>
+	</div>
+	</div>
 	</div>
 </div>		
 
