Pelitii suomeksi kans

--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -220,8 +220,8 @@
 					Pelaaja: <span id="player" data-bind="text: playerName" style="font-weight: bold"></span><br>
 					Tasoitus: <span id="playerhcp" data-bind="text: round_hcp" style="font-weight: bold"></span><br>
 					Pelitasoitus: <span id="playerplayhcp" data-bind="text: playerPlayingHcp" style="font-weight: bold"></span><br>
-					Tii: <span id="playerTee" data-bind="text: round_tee" style="font-weight: bold"></span><br>
-					Kierroksen kesto: <span id="duration" data-bind="text: roundDuration" style="font-weight: bold"></span><br>
+					Tii: <span id="playerTee" data-bind="text: locale_tee" style="font-weight: bold"></span><br>
+					Kierrosaika: <span id="duration" data-bind="text: roundDuration" style="font-weight: bold"></span><br>
 
 <!--						<span data-bind="if: roundEndTime()">End time:
 						<span data-bind="text: moment(roundEndTime()).format('HH:mm:ss')" style="font-weight: bold">
